--- a/assets/css/deveb.alfa.css
+++ b/assets/css/deveb.alfa.css
@@ -32,6 +32,38 @@ h1, h2, h3, h4, h5, h6{
 body{
 	font-family: 'Roboto', sans-serif;
 }
+/* === YARDIMCI === */
+.beri-1			{	margin:		15px}
+.beri-2		{	margin:		30px}
+.beri--1		{	margin:		-15px}
+.beri--2		{	margin:		-30px}
+.dolgu-1		{ padding:	15px}
+.dolgu-yan-1{ padding-right: 15px; padding-left: 15px}
+.dolgu-üst-1{ padding-top:15px}
+.dolgu-sağ-1{ padding-right:15px}
+.dolgu-sol-1{ padding-sol: 15px}
+.dolgu-alt-1{ padding-alt: 15px}
+.dolgu-2		{ padding: 	15px}
+.dolgu-yan-2{padding: 30px}
+.beri-yan-1	{ margin-left:15px; margin-right: 15px;}
+.beri-yan-2{ margin-left:30px; margin-right: 30px;}
+.beri-sağ-1	{ margin-right:	15px}
+.beri-sol-1	{ margin-left:	15px}
+.beri-üst-1	{ margin-top:		15px}
+.beri-alt-1	{ margin-bottom:15px}
+.beri-sağ-2{ margin-right:	30px}
+.beri-sol-2{ margin-left: 	30px}
+.beri-üst-2{ margin-top:		30px}
+.beri-alt-2{ margin-bottom:	30px}
+
+.taşma-gizli {	overflow:hidden;	}
+
+[class*="kap"].arala-1 > [class*="kap"]{
+	padding: 7.5px;
+}
+
+.sonkenar-1  	{	margin:-7.5px;	}
+
 /* ==========================================================================
     MENÜLER
     Menü görünümleri
@@ -83,56 +115,26 @@ table{
 	box-sizing: border-box;
 }
 
-/* === KAPLAMA YARDIMCI === */
-.beri-1			{	margin:		15px}
-.beri-2		{	margin:		30px}
-.beri--1		{	margin:		-15px}
-.beri--2		{	margin:		-30px}
-.dolgu-1		{ padding:	15px}
-.dolgu-yan-1{ padding-right: 15px; padding-left: 15px}
-.dolgu-üst-1{ padding-top:15px}
-.dolgu-sağ-1{ padding-right:15px}
-.dolgu-sol-1{ padding-sol: 15px}
-.dolgu-alt-1{ padding-alt: 15px}
-.dolgu-2		{ padding: 	15px}
-.dolgu-yan-2{padding: 30px}
-.beri-yan-1	{ margin-left:15px; margin-right: 15px;}
-.beri-yan-2{ margin-left:30px; margin-right: 30px;}
-.beri-sağ-1	{ margin-right:	15px}
-.beri-sol-1	{ margin-left:	15px}
-.beri-üst-1	{ margin-top:		15px}
-.beri-alt-1	{ margin-bottom:15px}
-.beri-sağ-2{ margin-right:	30px}
-.beri-sol-2{ margin-left: 	30px}
-.beri-üst-2{ margin-top:		30px}
-.beri-alt-2{ margin-bottom:	30px}
-
 [class*="kap"][class*="-merkez"] {
 	justify-content: center;
 }
-
 [class*="kap"][class*="-sağ"] {
 	justify-content: flex-end;
 	align-self: flex-end;
 	margin-left: auto;
 }
-
 [class*="kap"][class*="-üst"] {
 	align-items: flex-start;
 }
-
 [class*="kap"][class*="-orta"] {
 	align-items: center;
 }
-
 [class*="kap"][class*="-alt"] {
 	align-items: flex-end;
 }
-
 [class*="kap"][class*="-doldur"]{
 flex: 1 1 0%;
 }
-
 /* ======================= */
 
 /* === KAPLAMA ÖLÇEKLERİ === */
@@ -1318,3 +1320,8 @@ flex: 1 1 0%;
     BURADAN SONRASINI GELECEKTE SİLECEĞİZ
     BURADAN SONRASINI GELECEKTE SİLECEĞİZ
 ========================================================================== */
+.deneme-kutu{
+	border:1px solid green;
+	background-color: #eee;
+	width:100%;
+}
