--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -1,21 +1,37 @@
+
+
+
+
+
+
+
+
+
+
+.logo{
+	font-family: 'Comfortaa', cursive;
+	font-size: 26px;
+	color:#2c2171 !important;
+}
 .ap-kara	{background-color:#222;}
 .ap-deniz	{background-color: #17C4BB;}
-.ap-deveb	{background-color: #990044;}
+.ap-deveb	{background-color: #2c2171;}
+.ap-yesil	{background-color: #00BF6F;}
 
 .kenar-alt{border-bottom:1px solid #eceeef;-webkit-box-shadow: 0 2px 0 hsla(200,9%,93%,.25);
 box-shadow: 0 2px 0 hsla(200,9%,93%,.25);
 }
 
 .beri-1			{	margin:		15px}
-.beri-2		{	margin:		30px}
+.beri-2			{	margin:		30px}
 .beri--1		{	margin:		-15px}
 .beri--2		{	margin:		-30px}
 .dolgu-1		{ padding:	15px}
 .dolgu-yan-1{ padding-right: 15px; padding-left: 15px}
 .dolgu-üst-1{ padding-top:15px}
 .dolgu-sağ-1{ padding-right:15px}
-.dolgu-sol-1{ padding-sol: 15px}
-.dolgu-alt-1{ padding-alt: 15px}
+.dolgu-sol-1{ padding-left: 15px}
+.dolgu-alt-1{ padding-bottom: 15px}
 .dolgu-2		{ padding: 	15px}
 .dolgu-yan-2{padding: 30px}
 .beri-yan-1	{ margin-left:15px; margin-right: 15px;}
@@ -45,6 +61,7 @@ box-shadow: 0 2px 0 hsla(200,9%,93%,.25);
 .metin-sol{text-align: left;}
 .metin-olumlu{	color: green;}
 .metin-olumsuz{	color: gray;}
+.metin-belirsiz{color: tomato;}
 .metin-hata{	color:	red;}
 .metin-tehlike{	color: #c70000;}
 .metin-beyaz{	color:#fff;}
@@ -64,4 +81,31 @@ table{
 .tablo th, .tablo td{
 	border:1px solid #ddd;
 	padding:5px;
+}
+/* ==========================================================================
+    Liste
+    Temiz Liste
+========================================================================== */
+ul li{
+	margin-left:15px;
+}
+ul.liste-temiz li{
+	list-style: none;
+	margin-left: 0;
+}
+
+/* ==========================================================================
+    KUTU DÜZENİ
+    Varsayılan bir kutu görünümüyle ayırt edici bir görsel için
+========================================================================== */
+.kutu{
+  width: 100%;
+}
+.kutu-genel{
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.3);
+  margin:2px;
+  padding:5px;
+  background-color: #fff;
 }
